# clipboard-watcher

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: release.yaml  test.yaml
examples/: stream.rs  win.rs  with_gatekeeper.rs
src/: body.rs  body_senders.rs  driver.rs  error.rs  event_listener.rs  formats.rs  image.rs  lib.rs  logging.rs  observer.rs  stream.rs
src/linux/: driver.rs  observer.rs
src/macos/: driver.rs  mod.rs  observer.rs
src/win/: driver.rs  mod.rs  observer.rs
tests/: gatekeeper_test.rs  test.rs
