[package]
name = "clipboard-stream"
version = "0.2.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/nakaryo716/clipboard-stream"
license = "MIT"
description = """
Async stream of clipboard change events
"""
documentation = "https://docs.rs/clipboard-stream"
keywords = ["clipboard"]

[dependencies]
futures = "0.3"
thiserror = "2"
serde = { version = "1", optional = true, features = ["derive", "rc"] }
image = { version = "0.25", features = ["serde"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.11.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3", features = ["executor"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4", features = ["monitor", "std"] }

[[example]]
name = "stream"
path = "examples/stream.rs"

[features]
serde = ["dep:serde"]
