[package]
name = "clipboard-watcher"
version = "0.1.0"
edition = "2024"
readme = true
repository = "https://github.com/Rick-Phoenix/clipboard-watcher"
license = "Apache-2.0"
description = "Customizable listener for the system clipboard that uses the Stream async primitive"
keywords = ["clipboard", "async"]

[dependencies]
futures = "0.3"
thiserror = "2"
serde = { version = "1", optional = true, features = ["derive", "rc"] }
image = { version = "0.25", features = ["serde"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3", features = ["executor"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4", features = ["monitor", "std"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }
percent-encoding = "2.3.2"

[[example]]
name = "stream"
path = "examples/stream.rs"

[features]
serde = ["dep:serde"]
