[package]
name = "clipboard-watcher"
version = "0.1.0"
edition = "2024"
readme = true
repository = "https://github.com/Rick-Phoenix/clipboard-watcher"
license = "Apache-2.0"
description = "Customizable listener for the system clipboard that leverages the Stream trait"
keywords = ["clipboard", "stream", "macos", "windows", "linux"]

[package.metadata.release]
allow-branch = ["main"]

[dependencies]
futures = "0.3"
thiserror = "2"
serde = { version = "1", optional = true, features = ["derive", "rc"] }
log = "0.4"

[dev-dependencies]
rand = "0.9"
env_logger = "0.11"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
futures = { version = "0.3", features = ["executor"] }
tempfile = "3.23"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSArray",
  "NSData",
  "NSDictionary",
  "NSValue",
  "NSString",
  "NSURL",
  # For trait method
  "NSObject",
  "NSEnumerator",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSPasteboard",
  "NSPasteboardItem",
] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "tiff",
] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
hex = "0.4"
arboard = "3.6"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4", features = ["monitor", "std"] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "bmp",
] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }
percent-encoding = "2.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "stream"
path = "examples/stream.rs"

[features]
serde = ["dep:serde"]
